infra/services/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-pgadmin
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-pgadmin
  template:
    metadata:
      labels:
        app: service-pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
