infra/services/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pgadmin
  namespace: gallery
spec:
  selector:
    app: service-pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
